// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for 0bb7e8d64711 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
    {
      "id": "annotation:crash-seam",
      "kind": "crash-seam",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
      "id": "edge:allowed-by:3",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:1",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.gate_decisions[1].evidence.blocking_executions[0].operation_id",
      "from": "node:gate:2",
      "id": "edge:dedup-cites:2:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
      "relation": "dedup-cites",
      "stroke": "solid",
      "to": "node:execution:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
    },
    {
      "evidencePath": "inspect.gate_decisions[1].outcome",
      "from": "node:identity:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "id": "edge:denied-by:2",
      "relation": "denied-by",
      "stroke": "solid",
      "to": "node:gate:2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:1",
      "id": "edge:dispatched-through:1",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:1",
    },
    {
      "evidencePath": "inspect.receipts[0].transport_outcome",
      "from": "node:attempt:1",
      "id": "edge:evidence-gap:1",
      "relation": "evidence-gap",
      "stroke": "interrupted",
      "to": "node:observation:dest_4dec67739b2a3b88d94e7f9502227114",
    },
    {
      "evidencePath": "inspect.probes[0].result",
      "from": "node:probe:1",
      "id": "edge:observed-as:1",
      "relation": "observed-as",
      "stroke": "solid",
      "to": "node:observation:dest_4dec67739b2a3b88d94e7f9502227114",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "id": "edge:opened:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
    },
    {
      "evidencePath": "inspect.findings[0].evidence.probe_ids",
      "from": "node:probe:1",
      "id": "edge:produced-finding:1:1",
      "relation": "produced-finding",
      "stroke": "solid",
      "to": "node:finding:1",
    },
    {
      "evidencePath": "inspect.timeline[4].evidence.probe_ids",
      "from": "node:probe:1",
      "id": "edge:reconciled-as:5:1",
      "relation": "reconciled-as",
      "stroke": "solid",
      "to": "node:execution:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "id": "edge:registered-as:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
    },
    {
      "evidencePath": "inspect.resolutions[1].finding_id",
      "from": "node:finding:1",
      "id": "edge:resolved-through:1",
      "relation": "resolved-through",
      "stroke": "solid",
      "to": "node:resolution:1",
    },
    {
      "evidencePath": "inspect.gate_decisions[1].evidence.parameter_variants[0]",
      "from": "node:variant:sha256:074abd639c1ad62f7ad769c6261bfa1f7b93021f8171644ebe3d4ce3df98c2cd",
      "id": "edge:variant-of:sha256:074abd639c1ad62f7ad769c6261bfa1f7b93021f8171644ebe3d4ce3df98c2cd",
      "relation": "variant-of",
      "stroke": "dashed",
      "to": "node:identity:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
    },
  ],
  "effectId": "0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "kind": "intent",
      "lateral": false,
      "primary": "order.create · acme-store/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "kind": "identity",
      "lateral": false,
      "primary": "0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5",
      "rank": 1,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:variant:sha256:074abd639c1ad62f7ad769c6261bfa1f7b93021f8171644ebe3d4ce3df98c2cd",
      "kind": "variant",
      "lateral": true,
      "primary": "sha256:074abd639c1ad62f7ad769c6261bfa1f7b93021f8171644ebe3d4ce3df98c2cd",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:0bb7e8d64711e0cc5ec277fb9bb64d3d321fdd53dd92b8ebb1752fde822785f5:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:1",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:2",
      "kind": "gate",
      "lateral": true,
      "primary": "DENY ⊘ dedup",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:1",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:probe:1",
      "kind": "probe",
      "lateral": true,
      "primary": "reconcile_open → PRESENT (n=1)",
      "rank": 5,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:observation:dest_4dec67739b2a3b88d94e7f9502227114",
      "kind": "observation",
      "lateral": false,
      "primary": "dest_4dec67739b2a3b88d94e7f9502227114",
      "rank": 6,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:finding:1",
      "kind": "finding",
      "lateral": false,
      "primary": "CONFIRMED_UNIQUE",
      "rank": 7,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:resolution:1",
      "kind": "resolution",
      "lateral": false,
      "primary": "CLOSED",
      "rank": 8,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for 371a59b8452d 1`] = `
{
  "annotations": [],
  "edges": [
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "id": "edge:opened:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "id": "edge:registered-as:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
    },
  ],
  "effectId": "371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "kind": "intent",
      "lateral": false,
      "primary": "payout.create · acme-finance/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "kind": "identity",
      "lateral": false,
      "primary": "371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:371a59b8452dd4fe659e9dd4ef78fd8cac90b5dd36583aea1dff9e99b4f74f6c:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for c4ea734f26de 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7:0",
      "id": "edge:allowed-by:8",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:3",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:3",
      "id": "edge:dispatched-through:2",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:2",
    },
    {
      "evidencePath": "inspect.receipts[0].destination_ref",
      "from": "node:attempt:2",
      "id": "edge:externalized-to:2",
      "relation": "externalized-to",
      "stroke": "solid",
      "to": "node:observation:dest_1d6e8c42e39bfdd9717b848904a398e2",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "id": "edge:opened:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "id": "edge:registered-as:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
    },
  ],
  "effectId": "c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "kind": "intent",
      "lateral": false,
      "primary": "refund.create · acme-store/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "kind": "identity",
      "lateral": false,
      "primary": "c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:c4ea734f26decc15b551c4d91fb7a27dcaa4f1005cc9b4d1d17adf0bd0cb5ed7:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:3",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:2",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:observation:dest_1d6e8c42e39bfdd9717b848904a398e2",
      "kind": "observation",
      "lateral": false,
      "primary": "dest_1d6e8c42e39bfdd9717b848904a398e2",
      "rank": 6,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for c85c01dc4fe6 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
      "id": "edge:allowed-by:16",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:5",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:5",
      "id": "edge:dispatched-through:4",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:4",
    },
    {
      "evidencePath": "inspect.receipts[0].transport_outcome",
      "from": "node:attempt:4",
      "id": "edge:evidence-gap:4",
      "relation": "evidence-gap",
      "stroke": "interrupted",
      "to": "node:absence:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
    },
    {
      "evidencePath": "inspect.probes[0].result",
      "from": "node:probe:2",
      "id": "edge:observed-as:2",
      "relation": "observed-as",
      "stroke": "solid",
      "to": "node:absence:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
    },
    {
      "evidencePath": "inspect.probes[1].result",
      "from": "node:probe:3",
      "id": "edge:observed-as:3",
      "relation": "observed-as",
      "stroke": "solid",
      "to": "node:absence:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "id": "edge:opened:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
    },
    {
      "evidencePath": "inspect.findings[0].evidence.probe_ids",
      "from": "node:probe:2",
      "id": "edge:produced-finding:2:2",
      "relation": "produced-finding",
      "stroke": "solid",
      "to": "node:finding:2",
    },
    {
      "evidencePath": "inspect.findings[0].evidence.probe_ids",
      "from": "node:probe:3",
      "id": "edge:produced-finding:2:3",
      "relation": "produced-finding",
      "stroke": "solid",
      "to": "node:finding:2",
    },
    {
      "evidencePath": "inspect.timeline[4].evidence.probe_ids",
      "from": "node:probe:2",
      "id": "edge:reconciled-as:18:2",
      "relation": "reconciled-as",
      "stroke": "solid",
      "to": "node:execution:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
    },
    {
      "evidencePath": "inspect.timeline[4].evidence.probe_ids",
      "from": "node:probe:3",
      "id": "edge:reconciled-as:18:3",
      "relation": "reconciled-as",
      "stroke": "solid",
      "to": "node:execution:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "id": "edge:registered-as:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
    },
  ],
  "effectId": "c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "kind": "intent",
      "lateral": false,
      "primary": "notification.send · acme-store/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "kind": "identity",
      "lateral": false,
      "primary": "c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:5",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:4",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:probe:2",
      "kind": "probe",
      "lateral": true,
      "primary": "reconcile_open → ABSENT (n=0)",
      "rank": 5,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:probe:3",
      "kind": "probe",
      "lateral": true,
      "primary": "reconcile_open → ABSENT (n=0)",
      "rank": 5,
    },
    {
      "frame": "void",
      "hatched": false,
      "id": "node:absence:c85c01dc4fe6fd581e7b528ac1baacc59490e5d195f3a16c427e3ee516214817",
      "kind": "absence",
      "lateral": false,
      "primary": "confirmed absent — 2 probes",
      "rank": 6,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:finding:2",
      "kind": "finding",
      "lateral": false,
      "primary": "LOST",
      "rank": 7,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for e216ca270fe7 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20:0",
      "id": "edge:allowed-by:12",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:4",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:4",
      "id": "edge:dispatched-through:3",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:3",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "id": "edge:opened:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "id": "edge:registered-as:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
    },
  ],
  "effectId": "e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "kind": "intent",
      "lateral": false,
      "primary": "shipment.create · acme-logistics/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "kind": "identity",
      "lateral": false,
      "primary": "e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:e216ca270fe757cdc2c2f435a06c8f42855056a8220cb63c2ea789caaaf70b20:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:4",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:3",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for efcd86f31233 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954:0",
      "id": "edge:allowed-by:21",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:6",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:6",
      "id": "edge:dispatched-through:5",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:5",
    },
    {
      "evidencePath": "inspect.receipts[0].destination_ref",
      "from": "node:attempt:5",
      "id": "edge:externalized-to:5",
      "relation": "externalized-to",
      "stroke": "solid",
      "to": "node:observation:dest_21cdf15f3c676021907fd3ce0bbd9580",
    },
    {
      "evidencePath": "inspect.probes[0].result",
      "from": "node:probe:4",
      "id": "edge:observed-as:4",
      "relation": "observed-as",
      "stroke": "solid",
      "to": "node:observation:dest_21cdf15f3c676021907fd3ce0bbd9580",
    },
    {
      "evidencePath": "inspect.probes[0].n_found",
      "from": "node:probe:4",
      "id": "edge:observed-as:excess:3",
      "relation": "observed-as",
      "stroke": "solid",
      "to": "node:observation:excess-3",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "id": "edge:opened:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954:0",
    },
    {
      "evidencePath": "inspect.findings[0].evidence.probe_ids",
      "from": "node:probe:4",
      "id": "edge:produced-finding:3:4",
      "relation": "produced-finding",
      "stroke": "solid",
      "to": "node:finding:3",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "id": "edge:registered-as:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
    },
  ],
  "effectId": "efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "kind": "intent",
      "lateral": false,
      "primary": "order.create · acme-store/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "kind": "identity",
      "lateral": false,
      "primary": "efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:efcd86f31233098669466ff0afef22407bb52cb9f557d352685c8e7e785b7954:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:6",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:5",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:probe:4",
      "kind": "probe",
      "lateral": true,
      "primary": "audit → PRESENT (n=2)",
      "rank": 5,
    },
    {
      "frame": "solid",
      "hatched": true,
      "id": "node:observation:dest_21cdf15f3c676021907fd3ce0bbd9580",
      "kind": "observation",
      "lateral": false,
      "primary": "dest_21cdf15f3c676021907fd3ce0bbd9580",
      "rank": 6,
    },
    {
      "frame": "dashed",
      "hatched": true,
      "id": "node:observation:excess-3",
      "kind": "observation",
      "lateral": false,
      "primary": "observed excess ×1",
      "rank": 6,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:finding:3",
      "kind": "finding",
      "lateral": false,
      "primary": "DUPLICATE",
      "rank": 7,
    },
  ],
  "notes": [],
}
`;

exports[`buildEffectGraph — canonical fixtures > produces a deterministic snapshot for f18adfccc0bf 1`] = `
{
  "annotations": [
    {
      "id": "annotation:notch",
      "kind": "notch",
    },
  ],
  "edges": [
    {
      "evidencePath": "inspect.timeline[2].evidence.decision_id",
      "from": "node:execution:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0:0",
      "id": "edge:allowed-by:27",
      "relation": "allowed-by",
      "stroke": "solid",
      "to": "node:gate:7",
    },
    {
      "evidencePath": "inspect.record.adapter_id",
      "from": "node:intent:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "id": "edge:declares-destination:refdest-c2",
      "relation": "declares-destination",
      "stroke": "solid",
      "to": "node:adapter:refdest-c2",
    },
    {
      "evidencePath": "inspect.receipts[0].operation_id",
      "from": "node:gate:7",
      "id": "edge:dispatched-through:6",
      "relation": "dispatched-through",
      "stroke": "solid",
      "to": "node:attempt:6",
    },
    {
      "evidencePath": "inspect.receipts[0].transport_outcome",
      "from": "node:attempt:6",
      "id": "edge:evidence-gap:6",
      "relation": "evidence-gap",
      "stroke": "interrupted",
      "to": "node:unknown-slot:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
    },
    {
      "evidencePath": "inspect.timeline[0].cause",
      "from": "node:identity:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "id": "edge:opened:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0:0",
      "relation": "opened",
      "stroke": "solid",
      "to": "node:execution:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0:0",
    },
    {
      "evidencePath": "inspect.record.effect_id",
      "from": "node:intent:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "id": "edge:registered-as:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "relation": "registered-as",
      "stroke": "solid",
      "to": "node:identity:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
    },
  ],
  "effectId": "f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
  "integrityFailure": false,
  "nodes": [
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:intent:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "kind": "intent",
      "lateral": false,
      "primary": "subscription.cancel · acme-store/prod",
      "rank": 0,
    },
    {
      "frame": "dashed",
      "hatched": false,
      "id": "node:adapter:refdest-c2",
      "kind": "adapter",
      "lateral": true,
      "primary": "refdest-c2",
      "rank": 0,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:identity:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "kind": "identity",
      "lateral": false,
      "primary": "f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "rank": 1,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:execution:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0:0",
      "kind": "execution",
      "lateral": false,
      "primary": "step 0",
      "rank": 2,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:gate:7",
      "kind": "gate",
      "lateral": false,
      "primary": "ALLOW",
      "rank": 3,
    },
    {
      "frame": "solid",
      "hatched": false,
      "id": "node:attempt:6",
      "kind": "attempt",
      "lateral": false,
      "primary": "attempt 1 (primary)",
      "rank": 4,
    },
    {
      "frame": "dashed",
      "hatched": true,
      "id": "node:unknown-slot:f18adfccc0bfa6fabc817c15e2afd305a80c5d119f1c7101567cf43f28a913b0",
      "kind": "unknown-slot",
      "lateral": false,
      "primary": "?",
      "rank": 6,
    },
  ],
  "notes": [],
}
`;
